maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:35: error: not found: value i
	i(fa==0 && isDirLibre(Direction.OUEST)){
        ^